Added stock model for auto glass and tidied up files

--- a/code/Draw_glass_sankey.ipynb
+++ b/code/Draw_glass_sankey.ipynb
@@ -290,7 +290,7 @@
     }
    ],
    "source": [
-    "flows = pd.read_excel('glass_paper.xlsx', sheet_name='Flows', usecols = ['source', 'target', 'type', 'value'])\n",
+    "flows = pd.read_excel('../data/glass_paper.xlsx', sheet_name='Flows', usecols = ['source', 'target', 'type', 'value'])\n",
     "dataset = Dataset(flows)\n",
     "flows"
    ]
@@ -303,7 +303,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cc1d54839f046ffa0e2f952ceb3546a",
+       "model_id": "039b47922dba40979d6dc59881ae7050",
        "version_major": 2,
        "version_minor": 0
       },
@@ -318,7 +318,7 @@
    "source": [
     "nodes = {\n",
     "    # Raw materials\n",
-    "    \"RME\": ProcessGroup([\"RM\"], Partition.Simple(\"type\", ['Silica', 'Soda Ash', 'Limestone',]), \n",
+    "    \"RME\": ProcessGroup([\"RM\"], Partition.Simple(\"type\", ['Silica', 'Limestone', 'Soda Ash',]), \n",
     "                        title = 'Raw material extraction'),\n",
     "     \n",
     "    # Glass melting\n",
@@ -375,11 +375,11 @@
     "]\n",
     "\n",
     "ordering = [\n",
-    "    [[\"RME\"],            [],                          [],],\n",
-    "    [[\"FGM\", 'scrap1'], [\"CGM\", 'scrap2', 'scrap3'], [],],\n",
-    "    [[\"FGF\"],           [\"CGF\"],                     ['emissions'],],\n",
-    "    [['FGU'],           [\"CGU\"],                     [],],\n",
-    "    [['EoL'],           [],                          [],],\n",
+    "    [[],            [\"RME\"],                                      ],\n",
+    "    [[],            [\"FGM\", 'scrap1', \"CGM\", 'scrap2', 'scrap3'], ],\n",
+    "    [['emissions'], [\"FGF\", \"CGF\"],                               ],\n",
+    "    [[],            ['FGU', \"CGU\"],                               ],\n",
+    "    [[],            ['EoL', ],                                    ],\n",
     "]\n",
     "\n",
     "flow_partition = Partition.Simple(\"type\",\n",
@@ -387,7 +387,7 @@
     "    )\n",
     "\n",
     "sdd = SankeyDefinition(nodes, bundles, ordering, flow_partition = flow_partition)\n",
-    "weave(sdd, dataset, palette='Paired_12').to_widget(width=1150, height = 600).auto_save_svg('global_glass_sankey.svg')"
+    "weave(sdd, dataset, palette='Paired_12').to_widget(width=1150, height = 600).auto_save_svg('../outputs/global_glass_sankey.svg')"
    ]
   }
  ],
