--- a/code/Draw_glass_sankey.ipynb
+++ b/code/Draw_glass_sankey.ipynb
@@ -67,185 +67,262 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
        "      <td>RM</td>\n",
        "      <td>CGM</td>\n",
        "      <td>Soda Ash</td>\n",
        "      <td>13.587764</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "      <td>RM</td>\n",
        "      <td>CGM</td>\n",
        "      <td>Silica</td>\n",
        "      <td>38.513822</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>6</td>\n",
+       "      <td>5</td>\n",
        "      <td>RM</td>\n",
        "      <td>CGM</td>\n",
        "      <td>Limestone</td>\n",
        "      <td>8.531006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>7</td>\n",
+       "      <td>6</td>\n",
        "      <td>CGM</td>\n",
        "      <td>CGF</td>\n",
        "      <td>Liquid glass</td>\n",
        "      <td>87.611504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>8</td>\n",
+       "      <td>7</td>\n",
        "      <td>CGM</td>\n",
        "      <td>loss1</td>\n",
        "      <td>Emission</td>\n",
        "      <td>9.379862</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9</td>\n",
+       "      <td>8</td>\n",
        "      <td>FGM</td>\n",
        "      <td>FGF</td>\n",
        "      <td>Liquid glass</td>\n",
        "      <td>83.320973</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>10</td>\n",
+       "      <td>9</td>\n",
        "      <td>FGM</td>\n",
        "      <td>loss2</td>\n",
        "      <td>Emission</td>\n",
        "      <td>12.961424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>11</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>13</td>\n",
+       "      <td>10</td>\n",
        "      <td>CGF</td>\n",
        "      <td>CGM</td>\n",
        "      <td>Forming scrap</td>\n",
        "      <td>8.761150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>14</td>\n",
+       "      <td>11</td>\n",
        "      <td>FGF</td>\n",
        "      <td>FGM</td>\n",
        "      <td>Forming scrap</td>\n",
        "      <td>12.498146</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>15</td>\n",
+       "      <td>12</td>\n",
        "      <td>CGF</td>\n",
        "      <td>CGU</td>\n",
        "      <td>Beverages</td>\n",
        "      <td>59.137765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>16</td>\n",
+       "      <td>13</td>\n",
        "      <td>CGF</td>\n",
        "      <td>CGU</td>\n",
        "      <td>Food</td>\n",
        "      <td>15.770071</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>17</td>\n",
+       "      <td>14</td>\n",
        "      <td>CGF</td>\n",
        "      <td>CGU</td>\n",
        "      <td>Other CG</td>\n",
        "      <td>3.942518</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>18</td>\n",
+       "      <td>15</td>\n",
        "      <td>FGF</td>\n",
        "      <td>FGU</td>\n",
        "      <td>Buildings</td>\n",
        "      <td>58.782946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>19</td>\n",
+       "      <td>16</td>\n",
        "      <td>FGF</td>\n",
        "      <td>FGU</td>\n",
        "      <td>Automotive</td>\n",
        "      <td>4.249370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>20</td>\n",
+       "      <td>17</td>\n",
        "      <td>FGF</td>\n",
        "      <td>FGU</td>\n",
        "      <td>Other FG</td>\n",
        "      <td>7.790511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>21</td>\n",
+       "      <td>18</td>\n",
        "      <td>CGU</td>\n",
        "      <td>CGM</td>\n",
        "      <td>Beverages</td>\n",
        "      <td>20.698218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>22</td>\n",
+       "      <td>19</td>\n",
        "      <td>CGU</td>\n",
        "      <td>CGM</td>\n",
        "      <td>Food</td>\n",
        "      <td>5.519525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>23</td>\n",
+       "      <td>20</td>\n",
        "      <td>CGU</td>\n",
        "      <td>CGM</td>\n",
        "      <td>Other CG</td>\n",
        "      <td>1.379881</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>24</td>\n",
+       "      <td>21</td>\n",
        "      <td>CGU</td>\n",
        "      <td>EoL</td>\n",
        "      <td>Beverages</td>\n",
        "      <td>38.439547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>25</td>\n",
+       "      <td>22</td>\n",
        "      <td>CGU</td>\n",
        "      <td>EoL</td>\n",
        "      <td>Food</td>\n",
        "      <td>10.250546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>26</td>\n",
+       "      <td>23</td>\n",
        "      <td>CGU</td>\n",
        "      <td>EoL</td>\n",
        "      <td>Other CG</td>\n",
        "      <td>2.562636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>27</td>\n",
+       "      <td>24</td>\n",
        "      <td>FGU</td>\n",
        "      <td>EoL</td>\n",
        "      <td>Buildings</td>\n",
        "      <td>20.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>28</td>\n",
+       "      <td>25</td>\n",
        "      <td>FGU</td>\n",
        "      <td>EoL</td>\n",
        "      <td>Automotive</td>\n",
        "      <td>0.773333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>28</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>29</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>32</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>34</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>36</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>37</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>38</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>39</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -256,32 +333,43 @@
        "0      RM    FGM       Soda Ash  18.776050\n",
        "1      RM    FGM         Silica  53.219756\n",
        "2      RM    FGM      Limestone  11.788444\n",
-       "3     NaN    NaN            NaN        NaN\n",
-       "4      RM    CGM       Soda Ash  13.587764\n",
-       "5      RM    CGM         Silica  38.513822\n",
-       "6      RM    CGM      Limestone   8.531006\n",
-       "7     CGM    CGF   Liquid glass  87.611504\n",
-       "8     CGM  loss1       Emission   9.379862\n",
-       "9     FGM    FGF   Liquid glass  83.320973\n",
-       "10    FGM  loss2       Emission  12.961424\n",
-       "11    NaN    NaN            NaN        NaN\n",
-       "12    NaN    NaN            NaN        NaN\n",
-       "13    CGF    CGM  Forming scrap   8.761150\n",
-       "14    FGF    FGM  Forming scrap  12.498146\n",
-       "15    CGF    CGU      Beverages  59.137765\n",
-       "16    CGF    CGU           Food  15.770071\n",
-       "17    CGF    CGU       Other CG   3.942518\n",
-       "18    FGF    FGU      Buildings  58.782946\n",
-       "19    FGF    FGU     Automotive   4.249370\n",
-       "20    FGF    FGU       Other FG   7.790511\n",
-       "21    CGU    CGM      Beverages  20.698218\n",
-       "22    CGU    CGM           Food   5.519525\n",
-       "23    CGU    CGM       Other CG   1.379881\n",
-       "24    CGU    EoL      Beverages  38.439547\n",
-       "25    CGU    EoL           Food  10.250546\n",
-       "26    CGU    EoL       Other CG   2.562636\n",
-       "27    FGU    EoL      Buildings  20.400000\n",
-       "28    FGU    EoL     Automotive   0.773333"
+       "3      RM    CGM       Soda Ash  13.587764\n",
+       "4      RM    CGM         Silica  38.513822\n",
+       "5      RM    CGM      Limestone   8.531006\n",
+       "6     CGM    CGF   Liquid glass  87.611504\n",
+       "7     CGM  loss1       Emission   9.379862\n",
+       "8     FGM    FGF   Liquid glass  83.320973\n",
+       "9     FGM  loss2       Emission  12.961424\n",
+       "10    CGF    CGM  Forming scrap   8.761150\n",
+       "11    FGF    FGM  Forming scrap  12.498146\n",
+       "12    CGF    CGU      Beverages  59.137765\n",
+       "13    CGF    CGU           Food  15.770071\n",
+       "14    CGF    CGU       Other CG   3.942518\n",
+       "15    FGF    FGU      Buildings  58.782946\n",
+       "16    FGF    FGU     Automotive   4.249370\n",
+       "17    FGF    FGU       Other FG   7.790511\n",
+       "18    CGU    CGM      Beverages  20.698218\n",
+       "19    CGU    CGM           Food   5.519525\n",
+       "20    CGU    CGM       Other CG   1.379881\n",
+       "21    CGU    EoL      Beverages  38.439547\n",
+       "22    CGU    EoL           Food  10.250546\n",
+       "23    CGU    EoL       Other CG   2.562636\n",
+       "24    FGU    EoL      Buildings  20.400000\n",
+       "25    FGU    EoL     Automotive   0.773333\n",
+       "26    NaN    NaN            NaN        NaN\n",
+       "27    NaN    NaN            NaN        NaN\n",
+       "28    NaN    NaN            NaN        NaN\n",
+       "29    NaN    NaN            NaN        NaN\n",
+       "30    NaN    NaN            NaN        NaN\n",
+       "31    NaN    NaN            NaN        NaN\n",
+       "32    NaN    NaN            NaN        NaN\n",
+       "33    NaN    NaN            NaN        NaN\n",
+       "34    NaN    NaN            NaN        NaN\n",
+       "35    NaN    NaN            NaN        NaN\n",
+       "36    NaN    NaN            NaN        NaN\n",
+       "37    NaN    NaN            NaN        NaN\n",
+       "38    NaN    NaN            NaN        NaN\n",
+       "39    NaN    NaN            NaN        NaN"
       ]
      },
      "execution_count": 2,
@@ -303,7 +391,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "039b47922dba40979d6dc59881ae7050",
+       "model_id": "6527e6165f4b44c2a86ff533ee3d9e84",
        "version_major": 2,
        "version_minor": 0
       },
@@ -375,11 +463,11 @@
     "]\n",
     "\n",
     "ordering = [\n",
-    "    [[],            [\"RME\"],                                      ],\n",
-    "    [[],            [\"FGM\", 'scrap1', \"CGM\", 'scrap2', 'scrap3'], ],\n",
-    "    [['emissions'], [\"FGF\", \"CGF\"],                               ],\n",
-    "    [[],            ['FGU', \"CGU\"],                               ],\n",
-    "    [[],            ['EoL', ],                                    ],\n",
+    "    [[],            [\"RME\"],                                     ],\n",
+    "    [[],            [\"FGM\", 'scrap1', \"CGM\", 'scrap2', 'scrap3'],],\n",
+    "    [['emissions'], [\"FGF\", \"CGF\"],                              ],\n",
+    "    [[],            ['FGU', \"CGU\"],                              ],\n",
+    "    [[],            ['EoL', ],                                   ],\n",
     "]\n",
     "\n",
     "flow_partition = Partition.Simple(\"type\",\n",
