Generating .csv file of stock model results

--- a/code/Estimate_stocks_glass_in_buildings.ipynb
+++ b/code/Estimate_stocks_glass_in_buildings.ipynb
@@ -153,13 +153,15 @@
     "fig, ax=plt.subplots(1, 2, figsize = fig_size_tuple_double, \n",
     "                     dpi = fig_dpi, facecolor = 'w', edgecolor = 'k', sharex = True)\n",
     "\n",
+    "# Calculate flows\n",
+    "glass_buildings_in = Steel_stock_model['Inflow [kt]'] / 1e3 * np.mean(gs_ratio_in)\n",
+    "glass_buildings_out = Steel_stock_model['Outflow [kt]'] / 1e3 * np.mean(gs_ratio_out)\n",
+    "\n",
     "# Flows to stock\n",
-    "ax[0].plot(Steel_stock_model['Year'], Steel_stock_model['Inflow [kt]'] / 1e3 * \n",
-    "           np.mean(gs_ratio_in), label = 'In', color = 'k')\n",
+    "ax[0].plot(Steel_stock_model['Year'], glass_buildings_in, label = 'In', color = 'k')\n",
     "ax[0].scatter(building_flows['Year'], building_flows['In'], color = 'k')\n",
     "\n",
-    "ax[0].plot(Steel_stock_model['Year'], Steel_stock_model['Outflow [kt]'] / 1e3 * \n",
-    "           np.mean(gs_ratio_out), label = 'Out', color = 'silver')\n",
+    "ax[0].plot(Steel_stock_model['Year'], glass_buildings_out, label = 'Out', color = 'silver')\n",
     "ax[0].scatter(building_flows['Year'], building_flows['Out'], color = 'silver')\n",
     "\n",
     "\n",
@@ -171,15 +173,28 @@
     "# The stock gets an average of everything\n",
     "gs_ratio = np.mean(gs_ratio_in + gs_ratio_out)\n",
     "\n",
+    "# Calculate stock\n",
+    "glass_buildings_stock = (Steel_stock_model['Stocks [kg per person]'] * \n",
+    "           Cars_Datafile['Population'] / 1e9 * gs_ratio)\n",
+    "\n",
     "# Stock of glass\n",
-    "ax[1].plot(Steel_stock_model['Year'], Steel_stock_model['Stocks [kg per person]'] * \n",
-    "           Cars_Datafile['Population'] / 1e9 * gs_ratio, color = 'k')\n",
+    "ax[1].plot(Steel_stock_model['Year'], glass_buildings_stock, color = 'k')\n",
     "\n",
     "ax[1].set_xlabel('Year')\n",
     "ax[1].set_ylabel('Stock [Mt]')\n",
     "\n",
     "plt.savefig('../outputs/buildings_glass_flows_and_stocks.svg')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Save data from the graphs\n",
+    "buildings_flows_and_stock = pd.DataFrame(\n",
+    "    {'Year': Steel_stock_model['Year'],\n",
+    "     'Flows In [Mt]': glass_buildings_in,\n",
+    "     'Flows Out [Mt]': glass_buildings_out,\n",
+    "     'Stock [Mt]': glass_buildings_stock,\n",
+    "    })\n",
+    "\n",
+    "buildings_flows_and_stock.to_csv('../outputs/glass_buildings_flows_and_stock.csv')"
    ]
   }
  ],
