--- a/code/Estimate_stocks_glass_in_cars.ipynb
+++ b/code/Estimate_stocks_glass_in_cars.ipynb
@@ -130,7 +130,17 @@
     "ax[1].set_ylabel('Stock [Mt]')\n",
     "\n",
     "plt.savefig('../outputs/auto_glass_flows_and_stocks.svg')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Save data from the graphs\n",
+    "cars_flows_and_stock = pd.DataFrame(\n",
+    "    {'Year': GlobalVehicles_DSM.t,\n",
+    "     'Flows In [Mt]': Inflow_Glass / 1e9,\n",
+    "     'Flows Out [Mt]': Outflow_Glass / 1e9,\n",
+    "     'Stock [Mt]': Glass_Stock_ByCohort.sum(axis =1) / 1e9,\n",
+    "    })\n",
+    "\n",
+    "cars_flows_and_stock.to_csv('../outputs/glass_cars_flows_and_stock.csv')"
    ]
   }
  ],
